--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-VIEW_DATA_DEBUG=true
+VIEW_DATA_DEBUG=false
+DEBUGBAR_DEBUG=false
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
