--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+.idea
+_ide_helper.php
+_ide_helper_models.php
+.phpstorm.meta.php
 /node_modules
 /public/hot
 /public/storage
+/public/uploads
 /storage/*.key
 /vendor
 /.idea
